add_subdirectory(antialias)
add_subdirectory(cube)
add_subdirectory(egl_preserve)
add_subdirectory(etc_atlas_alpha)
add_subdirectory(etc_compressed_alpha)
add_subdirectory(etc_mipmap)
add_subdirectory(etc_uncompressed_alpha)
add_subdirectory(fetch_depth)
add_subdirectory(frame_buffer_object)
add_subdirectory(fur)
add_subdirectory(list_egl_configs)
add_subdirectory(particle)
add_subdirectory(rotozoom)
add_subdirectory(shadow_map)
add_subdirectory(template)
add_subdirectory(texts)
add_subdirectory(triangle)
