add_subdirectory(astc_textures)
add_subdirectory(boids)
add_subdirectory(etc2_texture_demo)
add_subdirectory(instanced_tesselation)
add_subdirectory(instancing)
add_subdirectory(integer_logic)
add_subdirectory(metaballs)
add_subdirectory(min_max_blending)
add_subdirectory(occlusion_query)
add_subdirectory(projected_lights)
add_subdirectory(shadow_mapping)
add_subdirectory(skybox)
add_subdirectory(shader_pixel_local_storage)
add_subdirectory(terrain)
